--- a/Solução/Projeto/Views/registrar.html
+++ b/Solução/Projeto/Views/registrar.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <link rel="icon" href="https://imgc.androidappsapk.co/fXDz_Tj2gGTq7hI2Q8cFSCLy-a8Bpmhle27baJq3fFNzrkYgF5jtff-ADsHBTNOuKxM=s300">
 
-  <title>Login</title>
+  <title>Registrar</title>
 
   <!-- javascript -->
   <script src="content/js/jquery-3.5.1.min.js"></script>
@@ -55,7 +55,7 @@
             <a class="nav-link" href="sobre.html">Sobre</a>
           </li>
         </ul>
-        <a class="nav-link" href="registrar.html">Registrar-se</a>
+        <a class="nav-link" href="login.html">Login</a>
       </div>
     </nav>
   </header>
@@ -64,7 +64,7 @@
     <div class="row">
       <div class="col-4"></div>
 
-      <form id="bodyContent" class="form-signin col-4" action="home.html">
+      <form id="bodyContent" class="form-signin col-4" action="index.html">
         <label style="font-size: 50px;">🎲</label>
         <input id="inputEmail" class="form-control" placeholder="Usuario" required="" autofocus="">
         <input type="password" id="inputPassword" class="form-control" placeholder="Senha" required="">
