--- a/Solução/Projeto/Views/registrar.html
+++ b/Solução/Projeto/Views/registrar.html
@@ -52,7 +52,7 @@
             <a class="nav-link" href="home.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sobre.html">Sobre</a>
+            <a class="nav-link" href="sobre.html">Sobre ❔</a>
           </li>
         </ul>
         <a class="nav-link" href="login.html">Login</a>
@@ -68,9 +68,9 @@
         <label style="font-size: 50px;">🎲</label>
         <input id="inputEmail" class="form-control" placeholder="Usuario" required="" autofocus="">
         <input type="password" id="inputPassword" class="form-control" placeholder="Senha" required="">
-        <br />
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
-        <a class="btn btn-lg btn-block btn-secondary" href="home.html">Cadastrar</a>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Repetir Senha" required="">
+        <br />        
+        <a class="btn btn-lg btn-block btn-primary" href="home.html">Cadastrar</a>
         <p class="mt-5 mb-3 text-muted"></p>
       </form>
 
