--- a/Solução/Projeto/Views/login.html
+++ b/Solução/Projeto/Views/login.html
@@ -52,7 +52,7 @@
             <a class="nav-link" href="home.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sobre.html">Sobre</a>
+            <a class="nav-link" href="sobre.html">Sobre ❔</a>
           </li>
         </ul>
         <a class="nav-link" href="registrar.html">Registrar-se</a>
@@ -70,7 +70,8 @@
         <input type="password" id="inputPassword" class="form-control" placeholder="Senha" required="">
         <br />
         <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
-        <a class="btn btn-lg btn-block btn-secondary" href="home.html">Cadastrar</a>
+        <a class="btn btn-lg btn-block btn-secondary" href="registrar.html">Cadastrar</a>
+        <a class="btn btn-lg btn-block btn-secondary" href="registrar.html">Esqueci minha senha</a>
         <p class="mt-5 mb-3 text-muted"></p>
       </form>
 
