--- a/Solução/Projeto/Views/sobre.html
+++ b/Solução/Projeto/Views/sobre.html
@@ -81,73 +81,63 @@
             </div>
         </nav>
     </header>
-
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <div id="bodyContent" class="jumbotron">
-                    <h1 class="display-4">Bem vindo ao RPG Replublic!</h1>
-                    <p class="lead">
-                        Nosso projeto tem como objetivo falitar suas partidas de RPG.
-                    </p>
-                    <br /><br /><br />
-
-                    <div class="row">
-                        <div class="col-6">
-                            <img src="content/images/Logo_Entrar.gif" width="200px">
-                            <p>Entrar</p>
-
-                        </div>
-                    </div>
-
-
-
-
-                    <!-- <hr>
-                    <section id="resume" class="resume section-bg">
+                    <h1 class="display-4">⚙️ Detalhes Tecnicos</h1>
+                    <p style="font-weight: bold;"><h4>Nosso projeto segue uma arquitetura em camadas<h4> 
+                        aos dados</p>
+                    <ul class="lista">
+                        <li>🔧 Sistema para auxilio em partidas RPG</li>
+                        <br>
+                        <li>🧰 Site <a href=""> RPG - Republic</a> Hospedado por Microsoft Azure</li>
+                        <br>
+                        <li>💻 Projeto OpenSource: <a
+                                href="https://github.com/den-silva/Rpg-Republic/">GitHub</a> </li>
+                        <br>
+                        <li>📚 Scram e Sprints Jira: <a
+                                href="https://rpgrepublic.atlassian.net/">JiraSoftware</a> </li>                                                
+                        <br>
+                        <li>☕️ Linguagem: Java Script - Node.js</li>
+                        <br>
+                        <li>📒 Banco de dados : noSQL - MongoDB</li>
+                        <br> 
+                        <li>📓 interface gráfica bibliotecas: Bootstrap & JQuery</li>
+                    </ul>
+                </div>
+                <div id="bodyContent" class="jumbotron">
+                    <h1 class="display-4">🦾 Autores</h1>
+                    <div class="col-10">
                         <div class="container" data-aos="fade-up">
-                            <h2>Desenvolvedores</h2>
                             <div class="row">
-                                <div class="col-6">
-                                    <img src="content/images/dev.gif">
+                                <div class="col-6">                                    
+                                        <img width="60%" height="60%" src="content/images/JoaoF.png">
+                                        <p>João Filipe, Desenvolvedor FullStack</p>
+                                        <p>082170017</p>                                   
                                 </div>
-
                                 <div class="col-6">
-                                    <div class="container" data-aos="fade-up">
-                                        <div class="row">
-                                            <div class="col-6">
-                                                <a type="button" class="btn" href="https://luizgustavo77.github.io/CV/index.html">
-                                                    <img width="60%" height="60%" src="content/images/Luiz.jfif">
-                                                    <p>Luiz Gustavo, Front-end</p>
-                                                    <p>82170039</p>
-                                                </a>
-                                            </div>
-                                            <div class="col-6">
-                                                <img width="60%" height="50%" src="content/images/Marcelo.jfif">
-                                                <p>Maxcelo Max, Gestão</p>
-                                                <p>082170021</p>
-                                            </div>
-                                            <div class="col-6">
-                                                <img width="60%" height="60%" src="content/images/Thiago.jfif">
-                                                <p>Thiago Lemes, Back-end</p>
-                                                <p>082170029</p>
-                                            </div>
-                                            <div class="col-6">
-                                                <img width="60%" height="60%" src="content/images/Jhonatan.jfif">
-                                                <p>Jhonatan Candido, Infra</p>
-                                                <p>082170016</p>
-                                            </div>
-                                        </div>
-                                    </div>
-
+                                    <img width="60%" height="60%" src="content/images/Matheus.png">
+                                    <p>Matheus, Gestão</p>
+                                    <p>081180041</p>
+                                </div>
+                                <div class="col-6">
+                                    <img width="60%" height="60%" src="content/images/Denilsono.png">
+                                    <p>Denilson, Back-end</p>
+                                    <p>082160032</p>
+                                </div>
+                                <div class="col-6">
+                                    <img width="60%" height="60%" src="content/images/Ighor.png">
+                                    <p>Ighão, Infra</p>
+                                    <p>082170011</p>
                                 </div>
                             </div>
-                    </section> -->
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
 </body>
 
 <footer class="text-center">
