--- a/Solução/Projeto/Views/home.html
+++ b/Solução/Projeto/Views/home.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="https://imgc.androidappsapk.co/fXDz_Tj2gGTq7hI2Q8cFSCLy-a8Bpmhle27baJq3fFNzrkYgF5jtff-ADsHBTNOuKxM=s300">
-        
+    <link rel="icon"
+        href="https://imgc.androidappsapk.co/fXDz_Tj2gGTq7hI2Q8cFSCLy-a8Bpmhle27baJq3fFNzrkYgF5jtff-ADsHBTNOuKxM=s300">
+
     <title>Home</title>
 
     <!-- javascript -->
@@ -53,25 +54,25 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Login
-                    </a>
-                    <div id="navdropdown" class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="login.html">
-                            Logar
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Login
                         </a>
-                        <a class="dropdown-item" href="registrar.html">Registrar</a>
-                    </div>
-                    <div id="navdropdown" class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="login.html">
-                            Sair
-                        </a>
-                        <a class="dropdown-item" href="#" onclick="home.LogOut()">Registrar</a>
-                    </div>
-                </li>                    
-                <li class="nav-item">
-                    <a class="nav-link" href="sobre.html">Sobre ❔</a>
-                </li>
+                        <div id="navdropdown" class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="login.html">
+                                Logar
+                            </a>
+                            <a class="dropdown-item" href="registrar.html">Registrar</a>
+                        </div>
+                        <div id="navdropdown" class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="login.html">
+                                Sair
+                            </a>
+                            <a class="dropdown-item" href="#" onclick="home.LogOut()">Registrar</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sobre.html">Sobre ❔</a>
+                    </li>
                 </ul>
                 <a class="nav-link" href="perfil.html">
                     <img class="avatarIcon" src="https://avatars.dicebear.com/api/avataaars/uash.svg" alt="user">
@@ -85,7 +86,7 @@
         <div class="row">
             <div class="col-12">
                 <div id="bodyContent" class="jumbotron">
-                    <h1 class="display-4">Bem vindo ao RPG Replublic!</h1>
+                    <h1 class="display-4">Bem vindo ao RPG Republic!</h1>
                     <p class="lead">
                         Nosso projeto tem como objetivo falitar suas partidas de RPG.
                     </p>
@@ -94,57 +95,27 @@
                     <div class="row">
                         <div class="col-6">
                             <img src="content/images/Logo_Entrar.gif" width="200px">
-                            <p>Entrar</p>
-
-                        </div>
-                    </div>
-
-
-
-
-                    <!-- <hr>
-                    <section id="resume" class="resume section-bg">
-                        <div class="container" data-aos="fade-up">
-                            <h2>Desenvolvedores</h2>
+                            <br /><br />
                             <div class="row">
+                                <div class="col-3"></div>
                                 <div class="col-6">
-                                    <img src="content/images/dev.gif">
-                                </div>
-
-                                <div class="col-6">
-                                    <div class="container" data-aos="fade-up">
-                                        <div class="row">
-                                            <div class="col-6">
-                                                <a type="button" class="btn" href="https://luizgustavo77.github.io/CV/index.html">
-                                                    <img width="60%" height="60%" src="content/images/Luiz.jfif">
-                                                    <p>Luiz Gustavo, Front-end</p>
-                                                    <p>82170039</p>
-                                                </a>
-                                            </div>
-                                            <div class="col-6">
-                                                <img width="60%" height="50%" src="content/images/Marcelo.jfif">
-                                                <p>Maxcelo Max, Gestão</p>
-                                                <p>082170021</p>
-                                            </div>
-                                            <div class="col-6">
-                                                <img width="60%" height="60%" src="content/images/Thiago.jfif">
-                                                <p>Thiago Lemes, Back-end</p>
-                                                <p>082170029</p>
-                                            </div>
-                                            <div class="col-6">
-                                                <img width="60%" height="60%" src="content/images/Jhonatan.jfif">
-                                                <p>Jhonatan Candido, Infra</p>
-                                                <p>082170016</p>
-                                            </div>
-                                        </div>
-                                    </div>
-
+                                    <input id="inputSala" class="form-control" placeholder="Código da sala" required=""
+                                        autofocus="" width="">
+                                    <br />
+                                    <a id="btnEntrarSala" class="btn btn-lg btn-block btn-primary"
+                                    href="sala.html">Entrar</a>
                                 </div>
                             </div>
-                    </section> -->
+                        </div>
+                        <div class="col-6">
+                            <img src="content/images/ListaSalas.png" >
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
+    </div>
     </div>
 
 </body>
