--- a/Solução/Projeto/Views/sala.html
+++ b/Solução/Projeto/Views/sala.html
@@ -81,71 +81,9 @@
             </div>
         </nav>
     </header>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div id="bodyContent" class="jumbotron">
-                    <h1 class="display-4">Bem vindo ao RPG Replublic!</h1>
-                    <p class="lead">
-                        Nosso projeto tem como objetivo falitar suas partidas de RPG.
-                    </p>
-                    <br /><br /><br />
-
-                    <div class="row">
-                        <div class="col-6">
-                            <img src="content/images/Logo_Entrar.gif" width="200px">
-                            <p>Entrar</p>
-
-                        </div>
-                    </div>
-
-
-
-
-                    <!-- <hr>
-                    <section id="resume" class="resume section-bg">
-                        <div class="container" data-aos="fade-up">
-                            <h2>Desenvolvedores</h2>
-                            <div class="row">
-                                <div class="col-6">
-                                    <img src="content/images/dev.gif">
-                                </div>
-
-                                <div class="col-6">
-                                    <div class="container" data-aos="fade-up">
-                                        <div class="row">
-                                            <div class="col-6">
-                                                <a type="button" class="btn" href="https://luizgustavo77.github.io/CV/index.html">
-                                                    <img width="60%" height="60%" src="content/images/Luiz.jfif">
-                                                    <p>Luiz Gustavo, Front-end</p>
-                                                    <p>82170039</p>
-                                                </a>
-                                            </div>
-                                            <div class="col-6">
-                                                <img width="60%" height="50%" src="content/images/Marcelo.jfif">
-                                                <p>Maxcelo Max, Gestão</p>
-                                                <p>082170021</p>
-                                            </div>
-                                            <div class="col-6">
-                                                <img width="60%" height="60%" src="content/images/Thiago.jfif">
-                                                <p>Thiago Lemes, Back-end</p>
-                                                <p>082170029</p>
-                                            </div>
-                                            <div class="col-6">
-                                                <img width="60%" height="60%" src="content/images/Jhonatan.jfif">
-                                                <p>Jhonatan Candido, Infra</p>
-                                                <p>082170016</p>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
-                    </section> -->
-                </div>
-            </div>
-        </div>
+    <div>
+        <br/><br/><br/>
+        <img src="content/images/Tela_Sala.png" width="90%">
     </div>
 
 </body>
