--- a/Solução/Projeto/Views/sobre.html
+++ b/Solução/Projeto/Views/sobre.html
@@ -64,10 +64,9 @@
                         <a class="dropdown-item" href="registrar.html">Registrar</a>
                     </div>
                     <div id="navdropdown" class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="login.html">
+                        <a class="dropdown-item" href="#" onclick="home.LogOut()" >
                             Sair
-                        </a>
-                        <a class="dropdown-item" href="#" onclick="home.LogOut()">Registrar</a>
+                        </a>                        
                     </div>
                 </li>                    
                 <li class="nav-item">
@@ -123,7 +122,7 @@
                                 </div>
                                 <div class="col-6">
                                     <img width="60%" height="60%" src="content/images/Denilsono.png">
-                                    <p>Denilson, Back-end</p>
+                                    <p>Denilson, Desenvolvedor Back-end</p>
                                     <p>082160032</p>
                                 </div>
                                 <div class="col-6">
