--- a/Solução/Projeto/Views/content/site.css
+++ b/Solução/Projeto/Views/content/site.css
@@ -113,7 +113,7 @@ table.dataTable thead .sorting_desc:after {
 }
 
 body{
-    margin-bottom:50px;
+    margin-bottom:5px;
 }
 
 footer{
@@ -136,4 +136,7 @@ footer{
     width: 20%; 
     background-color: white;
     border-radius: 100%;
+}
+.jumbotron {
+    height: 850px !important;
 }
