--- a/Solução/Projeto/Views/home.html
+++ b/Solução/Projeto/Views/home.html
@@ -12,19 +12,19 @@
 
     <title>Home</title>
 
-    <!-- javascript -->
-    <script src="content/js\jquery-3.5.1.min.js"></script>
-    <script src="content/data-tables/js/jquery.dataTables.js"></script>
-    <script src="content/data-tables/js/dataTables.bootstrap.js"></script>
-    <script src="content/js/bootstrap.min.js"></script>
-    <script src="content/adicional/main.js"></script>
-    <script src="content/adicional/home.js"></script>
+    <!-- javascript -->    
+    <script src="/content/js/jquery-3.5.1.min.js"></script>
+    <script src="/content/data-tables/js/jquery.dataTables.js"></script>
+    <script src="/content/data-tables/js/dataTables.bootstrap.js"></script>
+    <script src="/content/js/bootstrap.min.js"></script>
+    <script src="/content/adicional/main.js"></script>
+    <script src="/content/adicional/home.js"></script>
 
     <!-- css -->
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css" />
-    <link rel="stylesheet" type="text/css" href="content/data-tables/css/dataTables.bootstrap.css" />
-    <link href="content/css/bootstrap.min.css" rel="stylesheet">
-    <link href="content/site.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./content/data-tables/css/dataTables.bootstrap.css" />
+    <link href="./content/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./content/site.css" rel="stylesheet">
 
 </head>
 
@@ -34,7 +34,7 @@
             <h2>Carregando</h2>
         </div>
         <div class="loader">
-            <img src="content/images/loading.gif" alt="">
+            <img src="./content/images/loading.gif" alt="">
         </div>
     </div>
 
@@ -53,7 +53,7 @@
                         <a class="nav-link" href="home.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="login.html" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Login
                         </a>
@@ -94,7 +94,7 @@
 
                     <div class="row">
                         <div class="col-6">
-                            <img src="content/images/Logo_Entrar.gif" width="200px">
+                            <img src="./content/images/Logo_Entrar.gif" width="200px">
                             <br /><br />
                             <div class="row">
                                 <div class="col-3"></div>
@@ -108,7 +108,7 @@
                             </div>
                         </div>
                         <div class="col-6">
-                            <img src="content/images/ListaSalas.png" >
+                            <img src="./content/images/ListaSalas.png" >
                         </div>
                     </div>
                 </div>
