--- a/Solução/Projeto/Views/sobre.html
+++ b/Solução/Projeto/Views/sobre.html
@@ -13,18 +13,18 @@
     <title>Sobre</title>
 
     <!-- javascript -->
-    <script src="content/js\jquery-3.5.1.min.js"></script>
-    <script src="content/data-tables/js/jquery.dataTables.js"></script>
-    <script src="content/data-tables/js/dataTables.bootstrap.js"></script>
-    <script src="content/js/bootstrap.min.js"></script>
-    <script src="content/adicional/main.js"></script>
-    <script src="content/adicional/home.js"></script>
+    <script src="./content/js/jquery-3.5.1.min.js"></script>
+    <script src="./content/data-tables/js/jquery.dataTables.js"></script>
+    <script src="./content/data-tables/js/dataTables.bootstrap.js"></script>
+    <script src="./content/js/bootstrap.min.js"></script>
+    <script src="./content/adicional/main.js"></script>
+    <script src="./content/adicional/home.js"></script>
 
     <!-- css -->
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css" />
     <link rel="stylesheet" type="text/css" href="content/data-tables/css/dataTables.bootstrap.css" />
-    <link href="content/css/bootstrap.min.css" rel="stylesheet">
-    <link href="content/site.css" rel="stylesheet">
+    <link href="./content/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./content/site.css" rel="stylesheet">
 
 </head>
 
@@ -34,7 +34,7 @@
             <h2>Carregando</h2>
         </div>
         <div class="loader">
-            <img src="content/images/loading.gif" alt="">
+            <img src="./content/images/loading.gif" alt="">
         </div>
     </div>
 
