--- a/Solução/Projeto/Views/sobre.html
+++ b/Solução/Projeto/Views/sobre.html
@@ -13,7 +13,7 @@
     <title>Sobre</title>
 
     <!-- javascript -->
-    <script src="content/js\jquery-3.5.1.min.js"></script>
+    <script src="content/js/jquery-3.5.1.min.js"></script>
     <script src="content/data-tables/js/jquery.dataTables.js"></script>
     <script src="content/data-tables/js/dataTables.bootstrap.js"></script>
     <script src="content/js/bootstrap.min.js"></script>
