--- a/Solução/Projeto/Views/sobre.html
+++ b/Solução/Projeto/Views/sobre.html
@@ -90,7 +90,7 @@
                     <ul class="lista">
                         <li>🔧 Sistema para auxilio em partidas RPG</li>
                         <br>
-                        <li>🧰 Site <a href=""> RPG - Republic</a> Hospedado por Microsoft Azure</li>
+                        <li>🧰 Site <a href="https://rpg-republic.herokuapp.com/"> RPG - Republic</a> Hospedado por Heroku</li>
                         <br>
                         <li>💻 Projeto OpenSource: <a
                                 href="https://github.com/den-silva/Rpg-Republic/">GitHub</a> </li>
@@ -100,14 +100,16 @@
                         <br>
                         <li>☕️ Linguagem: Java Script - Node.js</li>
                         <br>
-                        <li>📒 Banco de dados : noSQL - MongoDB</li>
+                        <li>📒 Banco de dados : noSQL - <a
+                            href="https://www.postgresql.org/">PostgreSQL</a></li>
                         <br> 
                         <li>📓 interface gráfica bibliotecas: Bootstrap & JQuery</li>
                     </ul>
                 </div>
                 <div id="bodyContent" class="jumbotron">
                     <h1 class="display-4">🦾 Autores</h1>
-                    <div class="col-10">
+                    <br/>
+                    <div class="col-12">
                         <div class="container" data-aos="fade-up">
                             <div class="row">
                                 <div class="col-6">                                    
@@ -122,12 +124,12 @@
                                 </div>
                                 <div class="col-6">
                                     <img width="60%" height="60%" src="content/images/Denilsono.png">
-                                    <p>Denilson, Desenvolvedor Back-end</p>
+                                    <p>Denilson, Desenvolvedor Fantasma</p>
                                     <p>082160032</p>
                                 </div>
                                 <div class="col-6">
                                     <img width="60%" height="60%" src="content/images/Ighor.png">
-                                    <p>Ighão, Infra</p>
+                                    <p>Ighão, Postgresql DBA</p>
                                     <p>082170011</p>
                                 </div>
                             </div>
