--- a/Solução/Projeto/Views/content/site.css
+++ b/Solução/Projeto/Views/content/site.css
@@ -37,13 +37,35 @@ nav a{
     font-weight: bold;
 }
 
-body{
-    background-image: url("images/home.png");
+body{   
     background-attachment: fixed;
     background-position: center;
     width: 100% !important;
     height: 100%;
+    margin-bottom:5px;
 }
+
+.bodyImage1{
+    background-image: url("images/home.png");    
+}
+
+.bodyImage2{
+    background-image: url("images/home.png");    
+}
+
+.bodyImage3{
+    background-image: url("images/home.png");    
+}
+
+.bodyImage4{
+    background-image: url("images/home.png");    
+}
+
+.bodyImage5{
+    background-image: url("images/home.png");    
+}
+
+
 
 #bodyContent {
     margin-top: 50px;
@@ -112,9 +134,6 @@ table.dataTable thead .sorting_desc:after {
     content: "⬇️" !important;
 }
 
-body{
-    margin-bottom:5px;
-}
 
 footer{
     position: fixed;
