--- a/Solução/Projeto/Views/sobre.html
+++ b/Solução/Projeto/Views/sobre.html
@@ -95,7 +95,7 @@
                         <li>💻 Projeto OpenSource: <a
                                 href="https://github.com/den-silva/Rpg-Republic/">GitHub</a> </li>
                         <br>
-                        <li>📚 Scram e Sprints Jira: <a
+                        <li>📚 Scrum e Sprints Jira: <a
                                 href="https://rpgrepublic.atlassian.net/">JiraSoftware</a> </li>                                                
                         <br>
                         <li>☕️ Linguagem: Java Script - Node.js</li>
