--- a/Solução/Projeto/Views/sala.html
+++ b/Solução/Projeto/Views/sala.html
@@ -83,6 +83,136 @@
     </header>
     <div>
         <br/><br/><br/>
+        <div class="container">
+            <div class="row">
+                <form id="bodyContent" class="form-signin col-12" action="home.html">
+                    <h1>Ficha</h1>
+                    <p style="text-align: left;">Nome do personagem</p>
+                    <input id="characterName" class="form-control" placeholder="Nome do Personagem" required="" autofocus="">
+
+                    <p style="text-align: left;">Raça do personagem</p>
+                    <input id="characterRace" class="form-control" placeholder="Raça do Personagem" required="" autofocus="">
+
+                    <p style="text-align: left;">Vida do personagem</p>
+                    <input id="characterHp" type="number" class="form-control" placeholder="Vida do Personagem" required="" autofocus="">
+
+                    <p style="text-align: left;">Nome da Campanha</p>
+                    <input id="campaignName" class="form-control" placeholder="Nome da Campanha" required="" autofocus="">
+
+                    <p style="text-align: left;">Força</p>
+                    <input id="strength" type="number" class="form-control" placeholder="Força" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Força</button>
+
+                    <p style="text-align: left;">Destreza</p>
+                    <input id="dexterity" type="number" class="form-control" placeholder="Destreza" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Destreza</button>
+
+                    <p style="text-align: left;">Constituição</p>
+                    <input id="constitution" type="number" class="form-control" placeholder="Constituição" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Constituição</button>
+
+                    <p style="text-align: left;">Inteligência</p>
+                    <input id="intelligence" type="number" class="form-control" placeholder="Inteligência" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Inteligência</button>
+
+                    <p style="text-align: left;">Sabedoria</p>
+                    <input id="wisdom" type="number" class="form-control" placeholder="Sabedoria" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Sabedoria</button>
+
+                    <p style="text-align: left;">Carisma</p>
+                    <input id="charisma" type="number" class="form-control" placeholder="Carisma" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Carisma</button>
+
+                    <p style="text-align: left;">Proficiência</p>
+                    <input id="proficiency" type="number" class="form-control" placeholder="Proficiência" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Proficiência</button>
+
+                    <p style="text-align: left;">Velocidade</p>
+                    <input id="walkingSpd" type="number" class="form-control" placeholder="Velocidade" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Velocidade</button>
+
+                    <p style="text-align: left;">Iniciativa</p>
+                    <input id="initiative" type="number" class="form-control" placeholder="Iniciativa" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Iniciativa</button>
+
+                    <p style="text-align: left;">Acrobacia</p>
+                    <input id="acrobatics" type="number" class="form-control" placeholder="Acrobacia" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Acrobacia</button>
+
+                    <p style="text-align: left;">Manipulação de Animais</p>
+                    <input id="animalHandling" type="number" class="form-control" placeholder="Manipulação de Animais" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Manipulação de Animais</button>
+
+                    <p style="text-align: left;">Arcana</p>
+                    <input id="arcana" type="number" class="form-control" placeholder="Arcana" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Arcana</button>
+
+                    <p style="text-align: left;">Atletismo</p>
+                    <input id="athletics" type="number" class="form-control" placeholder="Atletismo" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Atletismo</button>
+
+                    <p style="text-align: left;">Deception</p>
+                    <input id="deception" type="number" class="form-control" placeholder="Deception" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Deception</button>
+
+                    <p style="text-align: left;">História</p>
+                    <input id="history" type="number" class="form-control" placeholder="História" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar História</button>
+
+                    <p style="text-align: left;">Insight</p>
+                    <input id="insight" type="number" class="form-control" placeholder="Insight" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Insight</button>
+
+                    <p style="text-align: left;">Intimidação</p>
+                    <input id="intimidation" type="number" class="form-control" placeholder="Intimidação" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Intimidação</button>
+
+                    <p style="text-align: left;">Investigação</p>
+                    <input id="investigation" type="number" class="form-control" placeholder="Investigação" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Investigação</button>
+
+                    <p style="text-align: left;">Medicina</p>
+                    <input id="medicine" type="number" class="form-control" placeholder="Medicina" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Medicina</button>
+
+                    <p style="text-align: left;">Natureza</p>
+                    <input id="nature" type="number" class="form-control" placeholder="Natureza" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Natureza</button>
+
+                    <p style="text-align: left;">Percepção</p>
+                    <input id="perception" type="number" class="form-control" placeholder="Percepção" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Percepção</button>
+                    
+                    <p style="text-align: left;">Performance</p>
+                    <input id="performance" type="number" class="form-control" placeholder="Performance" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Performance</button>
+
+                    <p style="text-align: left;">Persuasão</p>
+                    <input id="persuasion" type="number" class="form-control" placeholder="Persuasão" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Persuasão</button>
+
+                    <p style="text-align: left;">Religião</p>
+                    <input id="religion" type="number" class="form-control" placeholder="Religião" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Religião</button>
+
+                    <p style="text-align: left;">Habilidade com as Mãos</p>
+                    <input id="sleightOfHand" type="number" class="form-control" placeholder="Habilidade com as Mãos" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Habilidade com as Mãos</button>
+
+                    <p style="text-align: left;">Furtividade</p>
+                    <input id="stealth" type="number" class="form-control" placeholder="Furtividade" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Furtividade</button>
+
+                    <p style="text-align: left;">Sobrevivência</p>
+                    <input id="survival" type="number" class="form-control" placeholder="Sobrevivência" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Sobrevivência</button>
+
+                    <p style="text-align: left;">Acerto</p>
+                    <input id="hit" type="number" class="form-control" placeholder="Acerto" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block">Rolar Acerto</button>
+                </form>
+            </div>
+        </div>
         <img src="content/images/Tela_Sala.png" width="90%">
     </div>
 
