--- a/Views/registrar.html
+++ b/Views/registrar.html
@@ -39,8 +39,8 @@
     </div>
   </div>
 
-  <iframe src="menu.html"></iframe>
-  <!--<header>      
+  <!--<iframe src="menu.html"></iframe>-->
+  <header>      
        <nav class="navbar navbar-expand-lg navbar-light ">
         <a class="navbar-brand" href="home.html"> <span style="font-size: 25px;">🎲</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -60,7 +60,7 @@
           <a class="nav-link" href="login.html">Login</a>
         </div>
       </nav>     
-  </header>-->
+  </header>
 
   <br /> <br /><br /> <br />
 
@@ -74,7 +74,7 @@
         <input type="password" id="txtSenha" class="form-control" placeholder="Senha" required="">
         <input type="password" id="txtConfirmarSenha" class="form-control" placeholder="Repetir Senha" required="">
         <br />
-        <a class="btn btn-lg btn-block btn-primary" href="home.html">Cadastrar</a>
+        <a class="btn btn-lg btn-block btn-primary" onclick="registrar.registrar()"">Cadastrar</a>
         <p class="mt-5 mb-3 text-muted"></p>
       </form>
 
