--- a/Views/home.html
+++ b/Views/home.html
@@ -99,11 +99,14 @@
                             <div class="row">
                                 <div class="col-3"></div>
                                 <div class="col-6">
-                                    <input id="inputSala" class="form-control" placeholder="Código da sala" required=""
+                                    <input id="txtSala" class="form-control" placeholder="Código da sala" required=""
                                         autofocus="" width="">
                                     <br />
                                     <a id="btnEntrarSala" class="btn btn-lg btn-block btn-primary"
-                                    href="sala.html">Entrar</a>
+                                    onclick="home.validaEntrarSala()">Entrar</a>
+                                    <br/>
+                                    <a id="btnCriarSala" class="btn btn-lg btn-block btn-primary"
+                                    onclick="home.criarSala()">Criar Sala</a>
                                 </div>
                             </div>
                         </div>
