--- a/Views/sala.html
+++ b/Views/sala.html
@@ -107,6 +107,9 @@
     <div>
         <br /><br /><br />
         <div class="container">
+            <div class="row">
+                <h1 style="align-items: center;" id="NomeSala">Sala #234</h1>
+            </div>
             <div class="row form-signin">
                 <div class="col-4 borda">
                     </br>
