--- a/Views/sala.html
+++ b/Views/sala.html
@@ -34,6 +34,7 @@
             border: 1px solid rgb(42, 1, 119);
             padding: 20px;
             background-color: rgb(219, 218, 221);
+            align-items: left;
         }
 
         #chat {
@@ -117,8 +118,8 @@
                     <h1> Chat</h1>
                     <form id="chat">
                         <div class="messages"></div>
-                        <input type="text" style="width: 90%;" name="username" placeholder="digite sua mensagem">
-                        <button type="button"> Enviar</button>
+                        <input id="txtText" type="text" style="width: 90%;" name="username" placeholder="digite sua mensagem">
+                        <button type="button" onclick="sala.adicionarMensagem()"> Enviar</button>
                         </input>
                     </form>
                 </div>
