created lista de salas

--- a/Views/home.html
+++ b/Views/home.html
@@ -110,8 +110,55 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6">
-                            <img src="./content/images/ListaSalas.png" >
+                        <div class="bodySalas">
+                            <div class = "row">
+                                <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
+                                &nbsp
+                                &nbsp
+                                <p style="text-align:left">Sala Medieval 1 - COD 0001</p>
+                            </div>
+                            <div class = "row">
+                                <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
+                                &nbsp
+                                &nbsp
+                                <p style="text-align:left">Sala Medieval 2 - COD 0002</p>
+                            </div>
+                            <div class = "row">
+                                <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
+                                &nbsp
+                                &nbsp
+                                <p style="text-align:left">Sala Medieval 3 - COD 0003</p>
+                            </div>
+                            <div class = "row">
+                                <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
+                                &nbsp
+                                &nbsp
+                                <p style="text-align:left">Sala Medieval 4 - COD 0004</p>
+                            </div>
+                            <div class = "row">
+                                <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
+                                &nbsp
+                                &nbsp
+                                <p style="text-align:left">Sala Medieval 5 - COD 0005</p>
+                            </div>
+                            <div class = "row">
+                                <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
+                                &nbsp
+                                &nbsp
+                                <p style="text-align:left">Sala Terror 1 - COD 0006</p>
+                            </div>
+                            <div class = "row">
+                                <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
+                                &nbsp
+                                &nbsp
+                                <p style="text-align:left">Sala Terror 2 - COD 0007</p>
+                            </div>
+                            <div class = "row">
+                                <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
+                                &nbsp
+                                &nbsp
+                                <p style="text-align:left">Sala Terror 3 - COD 0008</p>
+                            </div>
                         </div>
                     </div>
                 </div>
