--- a/Views/content/site.css
+++ b/Views/content/site.css
@@ -65,6 +65,11 @@ body{
     background-image: url("images/home.png");    
 }
 
+.bodySalas {
+    padding: 40px;
+    background-color: rgb(200, 232, 232, 0.8);
+    height: 100%;
+}
 
 #bodyContent {
     margin-top: 50px;
