--- a/Views/home.html
+++ b/Views/home.html
@@ -115,49 +115,49 @@
                                 <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
                                 &nbsp
                                 &nbsp
-                                <p style="text-align:left">Sala Medieval 1 - COD 0001</p>
+                                <p style="text-align:left">Sala #001 - Sala Medieval</p>
                             </div>
                             <div class = "row">
                                 <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
                                 &nbsp
                                 &nbsp
-                                <p style="text-align:left">Sala Medieval 2 - COD 0002</p>
+                                <p style="text-align:left">Sala #001 - Sala Medieval</p>
                             </div>
                             <div class = "row">
                                 <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
                                 &nbsp
                                 &nbsp
-                                <p style="text-align:left">Sala Medieval 3 - COD 0003</p>
+                                <p style="text-align:left">Sala #001 - Sala Medieval</p>
                             </div>
                             <div class = "row">
                                 <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
                                 &nbsp
                                 &nbsp
-                                <p style="text-align:left">Sala Medieval 4 - COD 0004</p>
+                                <p style="text-align:left">Sala #006 - Sala Terror</p>
                             </div>
                             <div class = "row">
                                 <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
                                 &nbsp
                                 &nbsp
-                                <p style="text-align:left">Sala Medieval 5 - COD 0005</p>
+                                <p style="text-align:left">Sala #011 - Sala Medieval</p>
                             </div>
                             <div class = "row">
                                 <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
                                 &nbsp
                                 &nbsp
-                                <p style="text-align:left">Sala Terror 1 - COD 0006</p>
+                                <p style="text-align:left">Sala #021 - Sala Futurista</p>
                             </div>
                             <div class = "row">
                                 <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
                                 &nbsp
                                 &nbsp
-                                <p style="text-align:left">Sala Terror 2 - COD 0007</p>
+                                <p style="text-align:left">Sala #022 - Sala Futurista</p>
                             </div>
                             <div class = "row">
                                 <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
                                 &nbsp
                                 &nbsp
-                                <p style="text-align:left">Sala Terror 3 - COD 0008</p>
+                                <p style="text-align:left">Sala #023 - Sala Terror</p>
                             </div>
                         </div>
                     </div>
