--- a/Views/sala.html
+++ b/Views/sala.html
@@ -119,7 +119,7 @@
                     <form id="chat">
                         <div class="messages"></div>
                         <input id="txtText" type="text" style="width: 90%;" name="username" placeholder="digite sua mensagem">
-                        <button type="button" onclick="sala.adicionarMensagem()"> Enviar</button>
+                        <button class="form-control" type="button" onclick="sala.adicionarMensagem()"> Enviar</button>
                         </input>
                     </form>
                 </div>
