--- a/Views/content/site.css
+++ b/Views/content/site.css
@@ -14,6 +14,15 @@ input{
     margin-top: 1%;;
 }
 
+.borda {
+    border: 1px solid rgb(18, 13, 27);
+}
+
+.margem{
+    margin-left: 20px;
+    
+}
+
 header{
     z-index: 25;
     width: 100%;
