--- a/Views/home.html
+++ b/Views/home.html
@@ -12,7 +12,7 @@
 
     <title>Home</title>
 
-    <!-- javascript -->    
+    <!-- javascript -->
     <script src="/content/js/jquery-3.5.1.min.js"></script>
     <script src="/content/data-tables/js/jquery.dataTables.js"></script>
     <script src="/content/data-tables/js/dataTables.bootstrap.js"></script>
@@ -28,7 +28,7 @@
 
 </head>
 
-    <body class="text-center bodyImage1">
+<body class="text-center bodyImage1">
     <div id="modal" class="modal">
         <div style="text-align: center;">
             <h2>Carregando</h2>
@@ -99,21 +99,73 @@
                                         autofocus="" width="">
                                     <br />
                                     <a id="btnEntrarSala" class="btn btn-lg btn-block btn-primary"
-                                    onclick="home.validaEntrarSala()">Entrar</a>
-                                    <br/>
+                                        onclick="home.validaEntrarSala()">Entrar</a>
+                                    <br />
                                     <a id="btnCriarSala" class="btn btn-lg btn-block btn-primary"
-                                    onclick="home.criarSala()">Criar Sala</a>
+                                        onclick="home.criarSala()">Criar Sala</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6">
-                            <img src="./content/images/ListaSalas.png" >
+                        <div class="col-4  ">
+                            <div class="col-2"> &nbsp  &nbsp</div>
+                            
+                            <div calss="col-11">
+                                <br />
+                                <div class="row">
+                                    <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
+                                    &nbsp
+                                    &nbsp
+
+                                    <p style="text-align:left">Sala #001 - Sala Medieval</p>
+                                </div>
+                                <div class="row">
+                                    <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
+                                    &nbsp
+                                    &nbsp
+
+                                    <p style="text-align:left">Sala #001 - Sala Medieval</p>
+                                </div>
+                                <div class="row">
+                                    <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
+                                    &nbsp
+                                    &nbsp
+
+                                    <p style="text-align:left">Sala #006 - Sala Terror</p>
+                                </div>
+                                <div class="row">
+                                    <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
+                                    &nbsp
+                                    &nbsp
+
+                                    <p style="text-align:left">Sala #011 - Sala Medieval</p>
+                                </div>
+                                <div class="row">
+                                    <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
+                                    &nbsp
+                                    &nbsp
+
+                                    <p style="text-align:left">Sala #021 - Sala Futurista</p>
+                                </div>
+                                <div class="row">
+                                    <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
+                                    &nbsp
+                                    &nbsp
+
+                                    <p style="text-align:left">Sala #022 - Sala Futurista</p>
+                                </div>
+                                <div class="row">
+                                    <img src="./content/images/medieval-shield-png.png" height="20px" width="20px">
+                                    &nbsp
+                                    &nbsp
+
+                                    <p style="text-align:left">Sala #023 - Sala Terror</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
     </div>
 
