--- a/Views/sobre.html
+++ b/Views/sobre.html
@@ -90,7 +90,7 @@
                     <ul class="lista">
                         <li>🔧 Sistema para auxilio em partidas RPG</li>
                         <br>
-                        <li>🧰 Site <a href="https://rpg-republic.jfelipeab.repl.co/home.html"> RPG - Republic</a> Hospedado por <a href="replit.com"> replit</a></li>
+                        <li>🧰 Site <a href="https://rpg-republic.jfelipeab.repl.co/home.html"> RPG - Republic</a> Hospedado por <a href="https://replit.com/"> replit</a></li>
                         <br>
                         <li>💻 Projeto OpenSource: <a
                                 href="https://github.com/den-silva/Rpg-Republic/">GitHub</a> </li>
