--- a/Views/sala.html
+++ b/Views/sala.html
@@ -52,7 +52,7 @@
 
 </head>
 
-<body class="text-center">
+<body class="text-center bodyImage3">
     <div id="modal" class="modal">
         <div style="text-align: center;">
             <h2>Carregando</h2>
